se  agregan cambios en la seguridad col roles y los controllers reciben roles se crea prueban unitarias donde salen exitosas el crear y autenticar tambien se mejoran los properties se deja listo para  contenedores ejecuutar pruebas solo falto actualizar el pipeline